Query's and mutations
Yes