@@ -2,26 +2,40 @@ package una.ac.cr.FitFlow.resolver;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Controller;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.graphql.data.method.annotation.*;
+
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Page;
 
-import una.ac.cr.FitFlow.service.user.UserService;
-import una.ac.cr.FitFlow.service.role.RoleService;
-import una.ac.cr.FitFlow.dto.Role.RoleOutputDTO;
-import una.ac.cr.FitFlow.dto.User.UserOutputDTO;
-import una.ac.cr.FitFlow.dto.User.UserInputDTO;
-import una.ac.cr.FitFlow.dto.AuthToken.AuthTokenOutputDTO;
-import una.ac.cr.FitFlow.dto.UserPageDTO;
+import jakarta.validation.Valid;
+
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import una.ac.cr.FitFlow.dto.User.UserInputDTO;
+import una.ac.cr.FitFlow.dto.User.UserOutputDTO;
+import una.ac.cr.FitFlow.dto.User.UserPageDTO;
+import una.ac.cr.FitFlow.dto.Role.RoleOutputDTO;
+import una.ac.cr.FitFlow.dto.AuthToken.AuthTokenOutputDTO;
+import una.ac.cr.FitFlow.dto.Habit.HabitOutputDTO;
+
+import una.ac.cr.FitFlow.service.user.UserService;
+import una.ac.cr.FitFlow.service.role.RoleService;
+import una.ac.cr.FitFlow.service.Habit.HabitService;
+
 @Controller
 @RequiredArgsConstructor
+@Validated
 public class UserResolver {
+
     private final UserService userService;
     private final RoleService roleService;
+    private final HabitService habitService;
+
+    // ===== Queries =====
 
     @QueryMapping(name = "userById")
     public UserOutputDTO userById(@Argument("id") Long id) {
@@ -29,8 +43,9 @@ public class UserResolver {
     }
 
     @QueryMapping(name = "users")
-    public UserPageDTO users(@Argument("page") int page, @Argument("size") int size,
-            @Argument("keyword") String keyword) {
+    public UserPageDTO users(@Argument("page") int page,
+                             @Argument("size") int size,
+                             @Argument("keyword") String keyword) {
         Pageable pageable = PageRequest.of(page, size);
         Page<UserOutputDTO> userPage = userService.listUsers(keyword, pageable);
         return UserPageDTO.builder()
@@ -42,13 +57,16 @@ public class UserResolver {
                 .build();
     }
 
+    // ===== Mutations =====
+
     @MutationMapping(name = "createUser")
-    public UserOutputDTO createUser(@Argument("input") UserInputDTO userDto) {
+    public UserOutputDTO createUser(@Argument("input") @Valid UserInputDTO userDto) {
         return userService.createUser(userDto);
     }
 
     @MutationMapping(name = "updateUser")
-    public UserOutputDTO updateUser(@Argument("id") Long id, @Argument("input") UserInputDTO userDto) {
+    public UserOutputDTO updateUser(@Argument("id") Long id,
+                                    @Argument("input") UserInputDTO userDto) {
         return userService.updateUser(id, userDto);
     }
 
@@ -59,19 +77,31 @@ public class UserResolver {
     }
 
     @MutationMapping(name = "login")
-    public AuthTokenOutputDTO login(@Argument("email") String email, @Argument("password") String password) {
+    public AuthTokenOutputDTO login(@Argument("email") String email,
+                                    @Argument("password") String password) {
         return userService.loginByMail(email, password);
     }
 
-    @SchemaMapping(typeName = "User")
-    public List<RoleOutputDTO> roles(UserOutputDTO user) {
+    // ===== Field Resolvers =====
 
-        if (user.getRoleIds() == null) {
-            return List.of();
+    @SchemaMapping(typeName = "User", field = "roles")
+    public List<RoleOutputDTO> roles(UserOutputDTO user) {
+        if (user.getRoleIds() == null || user.getRoleIds().isEmpty()) {
+            return Collections.emptyList();
         }
         return user.getRoleIds().stream()
                 .map(roleService::findById)
                 .collect(Collectors.toList());
     }
-}
 
+    @SchemaMapping(typeName = "User", field = "habits")
+    public List<HabitOutputDTO> habits(UserOutputDTO user) {
+        // Requiere que UserOutputDTO tenga getHabitIds()
+        if (user.getHabitIds() == null || user.getHabitIds().isEmpty()) {
+            return Collections.emptyList();
+        }
+        return user.getHabitIds().stream()
+                .map(habitService::findHabitById)
+                .collect(Collectors.toList());
+    }
+}
