@@ -1,17 +1,14 @@
 package una.ac.cr.FitFlow.service.ProgressLog;
 
-import java.time.LocalDate;
-import java.util.List;
-import java.util.Objects;
-
 import lombok.RequiredArgsConstructor;
-
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import una.ac.cr.FitFlow.dto.ProgressLogDTO;
+import una.ac.cr.FitFlow.dto.ProgressLog.ProgressLogInputDTO;
+import una.ac.cr.FitFlow.dto.ProgressLog.ProgressLogOutputDTO;
+import una.ac.cr.FitFlow.mapper.MapperForProgressLog;
 import una.ac.cr.FitFlow.model.CompletedActivity;
 import una.ac.cr.FitFlow.model.ProgressLog;
 import una.ac.cr.FitFlow.model.Routine;
@@ -21,94 +18,86 @@ import una.ac.cr.FitFlow.repository.ProgressLogRepository;
 import una.ac.cr.FitFlow.repository.RoutineRepository;
 import una.ac.cr.FitFlow.repository.UserRepository;
 
+import java.util.Collections;
+import java.util.List;
+
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class ProgressLogServiceImplementation implements ProgressLogService {
+
     private final ProgressLogRepository progressLogRepository;
     private final UserRepository userRepository;
     private final RoutineRepository routineRepository;
     private final CompletedActivityRepository completedActivityRepository;
+    private final MapperForProgressLog mapper;
 
-    private ProgressLogDTO convertToDto(ProgressLog progressLog) {
-        return ProgressLogDTO.builder()
-                .id(progressLog.getId())
-                .userId(progressLog.getUser() != null ? progressLog.getUser().getId() : null)
-                .routineId(progressLog.getRoutine() != null ? progressLog.getRoutine().getId() : null)
-                .date(progressLog.getLogDate() != null ? progressLog.getLogDate().atStartOfDay() : null)
-                .completedActivityIds(
-                        progressLog.getCompletedActivities() == null ? List.of()
-                                : progressLog.getCompletedActivities().stream()
-                                        .map(CompletedActivity::getId)
-                                        .filter(Objects::nonNull)
-                                        .toList())
-                .build();
-    }
+    private ProgressLogOutputDTO toDto(ProgressLog pl) { return mapper.toDto(pl); }
 
-    private ProgressLog convertToEntity(ProgressLogDTO progressLogDto) {
-        User user = userRepository.findById(progressLogDto.getUserId()).orElseThrow(
-                () -> new IllegalArgumentException("Usuario no encontrado: " + progressLogDto.getUserId()));
-        Routine routine = routineRepository.findById(progressLogDto.getRoutineId()).orElseThrow(
-                () -> new IllegalArgumentException("Rutina no encontrada: " + progressLogDto.getRoutineId()));
+    @Override
+    @Transactional
+    public ProgressLogOutputDTO create(ProgressLogInputDTO dto) {
+        if (dto.getUserId() == null)    throw new IllegalArgumentException("userId es obligatorio.");
+        if (dto.getRoutineId() == null) throw new IllegalArgumentException("routineId es obligatorio.");
+        if (dto.getDate() == null)      throw new IllegalArgumentException("date es obligatorio.");
 
-        ProgressLog progressLog = ProgressLog.builder()
-                .user(user)
-                .routine(routine)
-                .logDate(progressLogDto.getDate().toLocalDate())
-                .build();
+        User user = userRepository.findById(dto.getUserId())
+                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado: " + dto.getUserId()));
+        Routine routine = routineRepository.findById(dto.getRoutineId())
+                .orElseThrow(() -> new IllegalArgumentException("Rutina no encontrada: " + dto.getRoutineId()));
 
-        if (progressLogDto.getCompletedActivityIds() != null && !progressLogDto.getCompletedActivityIds().isEmpty()) {
-            List<CompletedActivity> acts = completedActivityRepository
-                    .findAllById(progressLogDto.getCompletedActivityIds());
-            acts.forEach(a -> a.setProgressLog(progressLog));
-            progressLog.setCompletedActivities(acts);
-        }
+        ProgressLog pl = mapper.toEntity(dto, user, routine);
 
-        return progressLog;
-    }
-
-    private void applyForUpdate(ProgressLog target, ProgressLogDTO dto) {
-        if (dto.getUserId() != null
-                && (target.getUser() == null || !dto.getUserId().equals(target.getUser().getId()))) {
-            User user = userRepository.findById(dto.getUserId())
-                    .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado: " + dto.getUserId()));
-            target.setUser(user);
-        }
-        if (dto.getRoutineId() != null
-                && (target.getRoutine() == null || !dto.getRoutineId().equals(target.getRoutine().getId()))) {
-            Routine routine = routineRepository.findById(dto.getRoutineId())
-                    .orElseThrow(() -> new IllegalArgumentException("Rutina no encontrada: " + dto.getRoutineId()));
-            target.setRoutine(routine);
-        }
-        if (dto.getDate() != null) {
-            target.setLogDate(dto.getDate().toLocalDate());
-        }
         if (dto.getCompletedActivityIds() != null) {
-            List<CompletedActivity> acts = completedActivityRepository.findAllById(dto.getCompletedActivityIds());
-            acts.forEach(a -> a.setProgressLog(target));
-            target.getCompletedActivities().clear();
-            target.getCompletedActivities().addAll(acts);
-        }
-    }
+            List<CompletedActivity> acts = dto.getCompletedActivityIds().isEmpty()
+                    ? Collections.<CompletedActivity>emptyList()
+                    : completedActivityRepository.findAllById(dto.getCompletedActivityIds());
 
-    @Override
-    @Transactional
-    public ProgressLogDTO create(ProgressLogDTO dto) {
-        if (dto.getDate() == null) {
-            throw new IllegalArgumentException("La fecha (date) es requerida");
-        }
-        ProgressLog saved = progressLogRepository.save(convertToEntity(dto));
-        return convertToDto(saved);
-    }
+            if (!dto.getCompletedActivityIds().isEmpty() && acts.size() != dto.getCompletedActivityIds().size()) {
+                throw new IllegalArgumentException("Uno o más completedActivityIds no existen.");
+            }
 
-    @Override
-    @Transactional
-    public ProgressLogDTO update(Long id, ProgressLogDTO dto) {
-        ProgressLog pl = progressLogRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("ProgressLog no encontrado: " + id));
-        applyForUpdate(pl, dto);
+            acts.forEach(a -> a.setProgressLog(pl));
+            pl.setCompletedActivities(acts);
+        }
+
         ProgressLog saved = progressLogRepository.save(pl);
-        return convertToDto(saved);
+        return toDto(saved);
+    }
+
+    @Override
+    @Transactional
+    public ProgressLogOutputDTO update(Long id, ProgressLogInputDTO dto) {
+        ProgressLog current = progressLogRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("ProgressLog no encontrado: " + id));
+
+        User userIfChanged = null;
+        if (dto.getUserId() != null &&
+                (current.getUser() == null || !dto.getUserId().equals(current.getUser().getId()))) {
+            userIfChanged = userRepository.findById(dto.getUserId())
+                    .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado: " + dto.getUserId()));
+        }
+
+        Routine routineIfChanged = null;
+        if (dto.getRoutineId() != null &&
+                (current.getRoutine() == null || !dto.getRoutineId().equals(current.getRoutine().getId()))) {
+            routineIfChanged = routineRepository.findById(dto.getRoutineId())
+                    .orElseThrow(() -> new IllegalArgumentException("Rutina no encontrada: " + dto.getRoutineId()));
+        }
+
+        mapper.copyToEntity(dto, current, userIfChanged, routineIfChanged);
+
+        if (dto.getCompletedActivityIds() != null) {
+            List<CompletedActivity> acts = dto.getCompletedActivityIds().isEmpty()
+                    ? Collections.<CompletedActivity>emptyList()
+                    : completedActivityRepository.findAllById(dto.getCompletedActivityIds());
+            acts.forEach(a -> a.setProgressLog(current));
+            current.getCompletedActivities().clear();
+            current.getCompletedActivities().addAll(acts);
+        }
+
+        ProgressLog saved = progressLogRepository.save(current);
+        return toDto(saved);
     }
 
     @Override
@@ -121,33 +110,27 @@ public class ProgressLogServiceImplementation implements ProgressLogService {
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public ProgressLogDTO findById(Long id) {
+    public ProgressLogOutputDTO findById(Long id) {
         return progressLogRepository.findById(id)
-                .map(this::convertToDto)
+                .map(this::toDto)
                 .orElseThrow(() -> new IllegalArgumentException("ProgressLog no encontrado: " + id));
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public Page<ProgressLogDTO> list(Pageable pageable) {
-        return progressLogRepository.findAll(pageable).map(this::convertToDto);
+    public Page<ProgressLogOutputDTO> list(Pageable pageable) {
+        return progressLogRepository.findAll(pageable).map(this::toDto);
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public Page<ProgressLogDTO> listByUserId(Long userId, Pageable pageable) {
-        return progressLogRepository
-                .findByUserId(userId, pageable)
-                .map(this::convertToDto);
+    public Page<ProgressLogOutputDTO> listByUserId(Long userId, Pageable pageable) {
+        return progressLogRepository.findByUser_Id(userId, pageable).map(this::toDto);
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<ProgressLogDTO> findByUserIdAndDate(Long userId, LocalDate date) {
-        return progressLogRepository.findByUserIdAndLogDate(userId, date)
+    public List<ProgressLogOutputDTO> findByUserIdAndDate(Long userId, java.time.LocalDate date) {
+        return progressLogRepository.findByUser_IdAndLogDate(userId, date)
                 .stream()
-                .map(this::convertToDto)
-                .toList();
+                .map(this::toDto)
+                .collect(java.util.stream.Collectors.toList());
     }
 }
